--- a/css/style.css
+++ b/css/style.css
@@ -360,66 +360,22 @@ div.one-third, div.one-fourth, .copyright {
 }
 }
 
-/*----------------------------------------------------
-	5. Skill & Expert Style
-------------------------------------------------------*/
-.skillset {
-	background:#f8f8f8;
-	display:table;
-	width:100%;
-}
-.skillset .container{
-	padding-top:66px ;
-	padding-bottom:64px ;
-}
-.skillbar {
-	position:relative;
-	display:block;
-	margin-bottom:53px;
-	width:100%;
-	background:#e2e1e2;
-	height:7px;
-	border-radius:3px;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-	-webkit-transition:0.4s linear;
-	-moz-transition:0.4s linear;
-	-ms-transition:0.4s linear;
-	-o-transition:0.4s linear;
-	transition:0.4s linear;
-	-webkit-transition-property:width, background-color;
-	-moz-transition-property:width, background-color;
-	-ms-transition-property:width, background-color;
-	-o-transition-property:width, background-color;
-	transition-property:width, background-color;
+/* Make sure that padding behaves as expected */
+* {box-sizing:border-box}
+
+/* Container for skill bars */
+.container {
+  width: 100%; /* Full width */
+  background-color: #ddd; /* Grey background */
 }
 
-.skillbar-title {
-	position:absolute;
-	top:-27px;
-	left:0;
-	font-weight:bold;
-	font-size:13px;
-	line-height:27px;
-	text-transform:uppercase;
-	letter-spacing:2px;
-	color:#5b4c5c;
+.skills {
+  text-align: right; /* Right-align text */
+  padding: 10px; /* Add some padding */
+  color: white; /* White text color */
 }
 
-.skillbar-title span {
-	display:block;
-}
-
-.skillbar-bar {
-	height:7px;
-	width:0px;
-	background:#e88988;
-}
-
-.skill-bar-percent {
-	position:absolute;
-	top:-24px;
-	font-size:14px;
-	color:#796f7a;
-	margin-left:-20px;
-}
+.html {width: 90%; background-color: #4CAF50;} /* Green */
+.css {width: 80%; background-color: #2196F3;} /* Blue */
+.js {width: 65%; background-color: #f44336;} /* Red */
+.php {width: 60%; background-color: #808080;} /* Dark Grey */
