--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ div.one-third, div.one-fourth, .copyright {
 .skillbar-bar {
 	height:7px;
 	width:0px;
-	background:#e88988;
+	background:;
 }
 
 .skill-bar-percent {
