--- a/css/style.css
+++ b/css/style.css
@@ -359,3 +359,11 @@ div.one-third, div.one-fourth, .copyright {
 	font-size:30px;
 }
 }
+
+
+
+.threesteps{
+	float:left; 
+	padding: 10px; 
+	width: 33%;
+}
