--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,7 @@ div.one-third, div.one-fourth, .copyright {
 	font-size:30px;
 }
 }
+/* for division - 2/19 */
 .container {
   display: flex;
 }
