--- a/css/style.css
+++ b/css/style.css
@@ -375,10 +375,11 @@ div.one-third, div.one-fourth, .copyright {
 }
 /* img opacirt - 2/19 */
 div.imgeff{
-	opacity:0.7;
-}
-div.imgeff{
-	transition:all 1s ease-out;
+    opacity:0.7;
+    transition: opacity .5s ease-out;
+    -moz-transition: opacity .5s ease-out;
+    -webkit-transition: opacity .5s ease-out;
+    -o-transition: opacity .5s ease-out;
 }
 div.imgeff:hover{
 	opacity:1;
@@ -387,7 +388,6 @@ div.imgeff:hover{
 div.one-third-final{
 	width:31.3%;
 	position:relative;
-	margin-left:2%;
 	float:right;
 	margin-bottom:1.55em;
 }
