--- a/css/style.css
+++ b/css/style.css
@@ -386,4 +386,4 @@ div.imgeff:hover{
 }
 /* 3 partition - 2/19 */
  div.third-left{margin-left:2%; float:left; width:31.3%;}
- div.third-righ{tmargin-left:2%; float:right; width:31.3%;}
+ div.third-right{margin-left:2%; float:right; width:31.3%;}
