--- a/css/style.css
+++ b/css/style.css
@@ -387,3 +387,31 @@ div.imgeff:hover{
 /* 3 partition - 2/19 */
  div.third-left{margin-left:1%; float:left; width:31.3%;}
  div.third-right{margin-left:2%; float:right; width:31.3%;}
+ /*----------------------------------------------------
+ 	 8. Protfolio Style - 2/20
+ ------------------------------------------------------*/
+ .protfolio{
+ 	background:#fff;
+ 	width:100%;
+ 	overflow:hidden;
+ }
+ .protfolio .container{
+ 	padding-top:67px ;
+ 	padding-bottom:0 ;
+ }
+ .protfolio .heading {
+ 	padding-bottom:50px;
+ }
+ .protfolio .protBox{
+ 	padding-top:0 ;
+ 	padding-bottom:0 ;
+ 	position:relative;
+ }
+
+ .protfolio .heading p{
+ 	padding-bottom:41px;
+ 	color:#242424
+ }
+ .protfolio h4{
+ 	font-weight:700;
+ }
