--- a/css/style.css
+++ b/css/style.css
@@ -415,3 +415,11 @@ div.imgeff:hover{
  .protfolio h4{
  	font-weight:700;
  }
+/* for new section */
+.text-intro {
+	border-bottom:1px solid #e5e4e4;
+	float:left;
+	width:100%;
+	padding:25px 0;
+	margin-bottom:40px;
+}
