--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,7 @@ div.imgeff:hover{
  	font-weight:700;
  }
 /* for new section */
-.text-intro {
+.text-bottom {
 	border-bottom:1px solid #e5e4e4;
 	float:left;
 	width:100%;
