--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,16 @@ div.imgeff:hover{
  	font-weight:700;
  }
 /* for new section */
+.text-in {
+	border-bottom:1px solid #e5e4e4;
+	float:left;
+	width:100%;
+	padding:25px 0;
+	margin-bottom:40px;
+}
+.text-in h2 {
+	font-size:30px;
+}
 .text-bottom {
 	border-bottom:1px solid #e5e4e4;
 	float:left;
