--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,8 @@ div.imgeff:hover{
  ------------------------------------------------------*/
  .protfolio{
  	background:#fff;
- 	width:100%;
+	margin:0 auto;
+	max-width:950px;
  	overflow:hidden;
  }
  .protfolio .container{
