--- a/css/style.css
+++ b/css/style.css
@@ -417,3 +417,7 @@ div.imgeff:hover{
 	padding:25px 0;
 	margin-bottom:40px;
 	}
+	.line-bottom {
+		border-bottom:1px solid #e5e4e4;
+		float:left;
+		width:100%;
