--- a/css/style.css
+++ b/css/style.css
@@ -410,14 +410,16 @@ div.imgeff:hover{
  	font-weight:700;
  }
 /* for new section */
-.border-styles > p{
-	border-bottom:1px solid #e5e4e4;
-	float:left;
-	width:100%;
-	padding:25px 0;
-	margin-bottom:40px;
-	}
 	.line-bottom {
 		border-bottom:1px solid #e5e4e4;
 		float:left;
 		width:100%;
+		padding:25px 0;
+		margin-bottom:40px;
+	}
+	.line-bottom > p{
+		font-size:40px;
+		color:#606060;
+		text-align:center;
+		font-family:"Open Sans"
+	}
