--- a/css/style.css
+++ b/css/style.css
@@ -417,7 +417,7 @@ div.imgeff:hover{
 		padding:25px 0;
 		margin-bottom:40px;
 	}
-	.line-bottom > p{
+	.line-bottom h2{
 		font-size:40px;
 		color:#606060;
 		text-align:center;
