--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ div.imgeff:hover{
  ------------------------------------------------------*/
  .protfolio{
  	background:#fff;
-	margin:0 auto;
+	margin:0;
 	max-width:950px;
  	overflow:hidden;
  }
