--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,7 @@ div.imgeff:hover{
 	.line-family {
 		border-bottom:1px solid #e5e4e4;
 		float:left;
-		width:100%;
+		width:270px;
 		padding:5px 0;
 		margin-bottom:1px;
 	}
