update links page

--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -10,3 +10,9 @@
         width: 50%
         margin: 0 auto
         display: block
+
+.links
+    img
+        width: 50%
+        margin: 0 auto
+        display: block
