--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -9,6 +9,7 @@
 @import "pages/page";
 @import "pages/post";
 @import "pages/tags";
+@import "pages/links";
 
 @import "components/author";
 @import "components/disqus";
