update links page

--- a/_sass/pages/home-blog-projects-links.sass
+++ b/_sass/pages/home-blog-projects-links.sass
@@ -1,7 +1,6 @@
 .home,
 .blog,
-.projects,
-.links
+.projects
     margin-top: 125px
 
     > .list
@@ -26,8 +25,7 @@
 
 .home > .list,
 .blog > .list,
-.projects > .list,
-.links > .list
+.projects > .list
     > .item
         display: block
         width: 95%
@@ -65,8 +63,7 @@
         color: $alpha
 
 .blog > .list > .item > .url,
-.projects > .list > .item > .url,
-.links > .list > .item > .url
+.projects > .list > .item > .url
     > .title
         display: inline
 
