update links page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -41,7 +41,7 @@
                    {% if page.title == "Home" %}
                       {% if page.title != "Links" %}
                            <li class="item">
-                               <a class="link" href="{{ site.url }}/lins">Links</a>
+                               <a class="link" href="{{ site.url }}/links">Links</a>
                            </li>
                        {% endif %}
                    {% endif %}
