--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
    or page.title == "Blog"
    or page.title == "Projects"
    or page.title == "Tags"
-   or page.title == "Links"
+   or page.title == "Links
 %}{% assign showHeader = true %}{% endif %}
 
 {% if showHeader == true %}
