--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -39,7 +39,7 @@
         {% if site.links == true %}
             {% if page.title != "Links" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/about">Links</a>
+                    <a class="link" href="{{ site.url }}/links">Links</a>
                 </li>
             {% endif %}
         {% endif %}
