text color test

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,3 +25,5 @@
 {% endif %}
 
 {% include nav.html %}
+
+<link href="http://cdn.jsdelivr.net/gh/joungkyun/font-d2coding/d2coding.css" rel="stylesheet" type="text/css">
