--- a/_sass/base/syntax.sass
+++ b/_sass/base/syntax.sass
@@ -2,6 +2,10 @@
  * GitHub style for Pygments syntax highlighter, for use with Jekyll
  * Courtesy of GitHub.com
  */
+.highlight,pre.highlight{
++font-family: 'D2 coding', "Consolas", monospace;
+background:#222222;color:#aab1bf;}
+
 
 .highlight
 	.c
