--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,5 +1,5 @@
-$fontSans: 'Poppins', sans-serif
-$fontMonospace: 'Fira Sans', sans-serif
+$fontSans: "D2Coding", Helvetica, Arial, sans-serif
+$fontMonospace: "D2Coding", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: #666
 $beta: #222
