--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -31,4 +31,14 @@
 
         // if you put some links in your bio. ;)
         a
+            text-decoration: none
             font-weight: 200
+            color: blue
+            transition: all .4s ease-in-out
+
+        a:visited
+            text-decoration: none
+            color: darkblue
+
+        a:hover
+            color: lightblue            
