--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -42,5 +42,9 @@
             transition: all .4s ease-in-out
             width: 70px
 
+            &:link
+                color: darkblue
+            &:visited
+                color: darkblue
             &:hover
                 color: $alpha
