lab family linke test

--- a/_sass/base/normalize.scss
+++ b/_sass/base/normalize.scss
@@ -435,6 +435,10 @@ div.columns {
 
 div.one-third {
 	width:31.3%;
+  position:relative;
+  margin-left:2%;
+  float:left;
+  margin-bottom:1.55em;
 }
 
 	.line-family {
