--- a/_sass/base/normalize.scss
+++ b/_sass/base/normalize.scss
@@ -446,17 +446,14 @@ img[alt$="><"] {
 
 /** 20200130 **/
 ::selection {
-    background:#99CC00;
-    color: #FFF;
+    color: #e00966;
     text-shadow: none;
 }
 ::-moz-selection {
-    background:#99CC00;
-    color: #FFF;
+    color: #e00966;
     text-shadow: none;
 }
 ::-webkit-selection {
-    background:#99CC00;
-    color: #FFF;
+    color:#e00966;
     text-shadow: none;
 }
